Fix build for FirebaseUIChat
Change-Id: Ie8f45797e6427e61821fa37bfa43b19ea3b18e69

--- a/examples/FirebaseUIChat/Podfile
+++ b/examples/FirebaseUIChat/Podfile
@@ -1,7 +1,6 @@
 platform :ios, '7.0'
 
-pod 'FirebaseUI', :path => "../../FirebaseUI.podspec"
+pod 'FirebaseUI'
 
 target 'FirebaseUIChat' do
 end
-
