--- a/examples/FirebaseUIChat/Podfile
+++ b/examples/FirebaseUIChat/Podfile
@@ -1,6 +1,10 @@
 platform :ios, '7.0'
 
-pod 'FirebaseUI', :path => "../../FirebaseUI.podspec"
+#use local pod
+pod 'FirebaseUI', :path => "../../FirebaseUI"
+
+#use the lasted pod from git repo
+#pod 'FirebaseUI'
 
 target 'FirebaseUIChat' do
 end
